# projekt-urzad-miasta

./: .gitignore  CMakeLists.txt  RAPORT.md  README.md  generate_petents.sh
src/helpers/: consts.h  logger.c  logger.h  sync.c  sync.h  utils.c  utils.h
src/programs/: dyrektor.c  main.c  petent.c  rejestracja.c  test1.c  test2.c  test3.c  test4.c  urzednik.c
